fixing spacing and formatting

--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -29,7 +29,8 @@
     transition: 0.2s ease;
     color: white;
     background-Color: #212121;
-    backdrop-filter: 'blur(20px)'
+    backdrop-filter: 'blur(20px)';
+    
   }
 }
 
@@ -41,6 +42,7 @@
 
 .Modal--Buttons {
   display: inline-block;
+
 
   @media only screen 
     and (device-width : 375px) 
@@ -76,6 +78,7 @@
   &:hover {
     color: black;
     background-color: #08FDD8;
+    cursor: pointer;
   }
 
 }
@@ -87,6 +90,10 @@
   color: black;
   background-color: #08FDD8;
   font-size: 14px;
+
+  &:hover {
+    cursor: "pointer"
+  }
 
   @media only screen 
   and (device-width : 375px) 
@@ -104,6 +111,10 @@
   background-color: red;
   font-size: 14px;
   margin-left: 2em;
+
+  &:hover {
+    cursor: pointer;
+  }
 
   @media only screen 
     and (device-width : 375px) 
